# jot

./: .gitignore  Cargo.toml  Makefile  build.sh  go.mod  go.sum  jot.go  jot.py  read.go  readme.adoc  readme.md  util.go  write.go
cmd/jot/: main.go  read.go  util.go  write.go
src/: config.rs  main.rs  utils.rs
