[package]
name = "zk"
version = "0.1.0"
authors = ["Marcus Kazmierczak <marcus@mkaz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
