[package]
name = "jot"
version = "0.5.2"
authors = ["Marcus Kazmierczak <marcus@mkaz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = "0.4.19"
clap = "3.0.0-beta.5"
serde = { version = "1.0.13", features = ["derive"] }
toml = "0.5.8"
