[package]
name = "jot"
version = "0.6.0"
authors = ["Marcus Kazmierczak <marcus@mkaz.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = "0.4.23"
clap = { version = "3.2.23", features = [ "cargo" ] }
serde = { version = "1.0.149", features = ["derive"] }
toml = "0.5.0"
